<resources>
    <string name="app_name">Officer</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="accessibility_label">Officer Accessibility</string>
    <string name="accessibility_description">To detect if a power menu is opened, Officer needs accessibility settings. You can be rest assured that this setting has no other malicious intent.</string>
    <string name="admin_label">Officer Admin Access</string>
    <string name="admin_description">Officer uses this privilege to put your screen to sleep in case someone tries to power off your phone from the lock screen.</string>
    <string name="accessibility_dialog_title">Grant Accessibility</string>
    <string name="accessibility_dialog_message">On Android 13 and above, accessibility permission is blocked by default for applications that are not downloaded from the Google Play Store. However, you can still enable it by following these steps:\n\n
    1. Try to enable the accessibility by clicking on \"Grant Accessibility Permission\" button above.\n
    2. You will most probably see a \"Restricted Setting\" message. Make sure you open the popup dialog
    saying \"For your security, this setting is currently unavailable\".\n
    3. Only after this, go to App info page of this app and click on three dots menu in top right corner.\n
    4. Click \"Allow restricted settings\".\n\n\n<u>Note:</u> This is an open source application. Rest assured that this setting has no other malicious intent.</string>
    <string name="go_to_app_info">Go to app info</string>
    <string name="dismiss">Dismiss</string>
    <string name="use_strict_security">Use strict security</string>
    <string name="strict_security_settings">Strict Security Settings</string>
    <string name="strict_security_desc">Turn screen off automatically for a specific time if tried to power off from lock screen. Less convenient, but more secure.</string>
    <string name="info">Info</string>
    <string name="strict_security_info">When this setting is on, if someone opens the power menu from the lock screen, the screen will turn off automatically.
        A timer will then start, and during this time, the screen will turn off again if turned on. Once the timer ends, you can use your phone normally.
        If someone tries to open the power menu again, the timer restarts. This makes it much harder for a thief to shut down the phone before it locks.</string>
    <string name="set_timer_duration">Set timer duration in seconds</string>
    <string name="use_custom_trigger">Use custom trigger</string>
    <string name="set_custom_info">Different phone manufacturers have different event triggers which get broadcast when the power menu is opened. Hence, there is no one-size-fits all solution. Trigger the power menu right now, and the app will detect a few related events which were broadcasted. Try out all the options in the list of events below and select an option which works for your device.</string>
    <string name="send_sms_alert">Send SMS alert</string>
    <string name="send_alert_sms_desc">Automatically send an SMS if tried to power off from lock screen. Optionally, attach the device location with it.</string>
    <string name="welcome_set_custom_info">Different phone manufacturers have different event triggers which get broadcast when the power menu is opened. Hence, there is no one-size-fits all solution. Once you give all the required permissions, use the custom trigger menu to complete the setup.</string>
    <string name="set_custom_trigger_desc">Set a custom trigger point for putting the screen to sleep. If the app is not working on your device, try setting this up.</string>
    <string name="listening_for_events">Please open your device\'s power menu.\nListening for events…</string>
    <string name="setup">Setup</string>
    <string name="configure">Configure</string>
    <string name="detected_events">Detected events:</string>
    <string name="detected_events_hint">Generally, a power menu will have a name similar to \"Global Actions Dialog\".</string>
    <string name="choose_a_trigger_from_the_options_below">Choose a trigger from the options below:</string>
    <string name="current_trigger">Current trigger: </string>
    <string name="save">SAVE</string>
    <string name="about">About</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="view_source_code">View Source Code Repository</string>
    <string name="changelog">Changelog</string>

    <!--    Release Note Strings-->
    <string name="r1.0.0">- Initial release</string>
    <string name="r1.1.0">- Added custom triggers\n- Moved About section to new page\n- Added Changelog page\n- Added open source licenses
    \n- Migrated buttons to match expressive theming\n- Added new fonts: Google Rounded Sans, Bagel Fat\n- Fixed issue where title appeared behind status bar</string>
    <string name="about_app">About App</string>
    <string name="omkar_phadke">Omkar Phadke</string>
    <string name="share_via_link">Share Officer App</string>
    <string name="share_app_desc">Love the app? Star the repository and spread the word! It helps me stay motivated!</string>
    <string name="welcome_to_officer">Welcome to Officer</string>
    <string name="officer_desc1">Officer is an open source app, which helps in locating your phone in case of theft. No root or Shizuku required.</string>
    <string name="officer_desc2">Usually, if you lose your phone, you can locate it using the Google\'s \'Find my Device\' feature. However,
        that only works if your device is not switched off. Thieves take advantage of this, and they power off your phone to prevent tracking.</string>
    <string name="officer_desc3">This app will prevent powering off your phone from the lock screen. It uses a work-around where in case anyone
    tries to open the power menu from the lock screen, it will put the display to sleep. But don\'t worry, if YOU want to power off your phone, you can unlock your screen and proceed as usual.</string>
    <string name="next">NEXT</string>
    <string name="the_problem">The Problem.</string>
    <string name="the_solution">The Solution.</string>
    <string name="detecting_events">Detecting events...</string>
    <string name="set_up_trigger">Set up trigger</string>
    <string name="maybe_later">Maybe later</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_desc">Enter the phone number, your desired text message and the SIM card network to be used. This number will be receiving your text message. Make sure you include the country code in the number.</string>
    <string name="contact_details">Contact Details</string>
    <string name="location">Location</string>
    <string name="location_desc">Append the Google Maps location link to the SMS content.</string>
    <string name="ignore_count">Ignore Count</string>
    <string name="ignore_count_desc">Decide how many times you would like the app to ignore powering off attempts before sending the SMS. This is useful for preventing accidental alerts. The counting resets when you unlock your device.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ante massa, euismod rhoncus rutrum ac, hendrerit quis libero. Maecenas venenatis tellus quis neque lacinia bibendum. Nullam imperdiet a libero a accumsan. Praesent bibendum sed ligula sed pharetra. Donec fermentum orci at nisl ullamcorper blandit.</string>
    <string name="preview_placeholder">Your message preview will appear here.</string>
    <string name="maps_link_template">\nMaps Link: https://maps.google.com/?q=18.519596177869815,73.85542072116314 (example)</string>
    <string name="saved">Saved</string>
    <string name="sim_permission_required">Phone state permission is required to detect SIM cards.</string>
    <string name="location_permission_required">Background location permission is required.</string>
    <string name="cooldown_count">Cooldown Count</string>
    <string name="cooldown_count_desc">Decide how many power off attempts would you like the app to wait after sending an SMS and before sending another one. Generally, once an SMS is sent, you already have been alerted, so there is technically no need for another one. Set the slider to \'-1\' if you don\'t want the alerts to be repeated in that session.</string>
    <string name="broadcast_event">Broadcast Event</string>
    <string name="broadcast_event_desc">Broadcast an event when tried to power off from the lock screen. Useful for integrating with third party automation apps.</string>
    <string name="broadcast_event_desc2">Broadcast an event when tried to power off from the lock screen. You can use automation routines with third party apps like Tasker and Macrodroid to trigger further actions on your phone. The intent will be named as \'com.akruzen.officer.ACTION_LOCK_TRIGGERED\'</string>
    <string name="repetition">Repetition</string>
    <string name="repetition_desc">Broadcast the event each and every time the power menu is triggered from the lock screen. Turning this OFF will broadcast the event only once per session.</string>
    <string name="inspiration">Inspiration</string>
    <string name="inspiration_desc">I was returning home one evening by a Rickshaw Cab. When I got off the cab to pay the driver, I had left my phone on the seat. After paying the money, the driver immediately sped off thus stealing my phone. I tried to track my phone using Google\'s \'Find my device\', but unfortunately, he had switched off my phone. I hope my app will help people buy time to track their devices if such cases happen to them.</string>
</resources>