<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsAlertActivity">

    <TextView
        android:id="@+id/textView6"
        style="@style/Theme.OFFicer.RoundedFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/send_sms_alert"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/saveFab2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginVertical="48dp"
                app:srcCompat="@drawable/art_sms" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="16dp"
                            app:srcCompat="@drawable/tilted_capsule" />

                        <TextView
                            style="@style/Theme.OFFicer.FatFont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="Info"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        style="@style/Theme.OFFicer.RoundedFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/send_alert_sms_desc" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/contact_details"
                android:textStyle="bold" />

            <TextView
                style="@style/Theme.OFFicer.RoundedFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/phone_number_desc" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/callOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:startIconDrawable="@drawable/call"
                app:startIconTint="@color/dynamic_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/smsOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Text Message"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:startIconDrawable="@drawable/sms"
                app:startIconTint="@color/dynamic_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smsMessageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="120" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/simToggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:overflowMode="wrap"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_marginTop="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sim1Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.Medium"
                    android:text="SIM 1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sim2Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.Medium"
                    android:text="SIM 2" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/location"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/Theme.OFFicer.RoundedFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/location_desc" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/locationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ignore_count"
                android:textStyle="bold" />

            <TextView
                style="@style/Theme.OFFicer.RoundedFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ignore_count_desc" />

            <com.google.android.material.slider.Slider
                android:id="@+id/ignoreCountSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelBehavior="visible"
                android:stepSize="1"
                android:value="3"
                android:valueFrom="0"
                android:valueTo="10" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Preview"
                android:textStyle="bold" />

            <TextView
                style="@style/Theme.OFFicer.RoundedFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="This is how your message will look." />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/previewTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center"
                    android:text="@string/lorem_ipsum" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveFab2"
        style="@style/Theme.OFFicer.FatFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:enabled="false"
        android:text="@string/save"
        app:icon="@drawable/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:materialThemeOverlay="@style/ThemeOverlay.Material3Expressive.FloatingActionButton.Primary" />
</androidx.constraintlayout.widget.ConstraintLayout>